[project]
name = "milvus-ollama-trial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.0.1",
    "ipython>=9.6.0",
    "langchain>=1.0.1",
    "langchain-community>=0.4",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pymilvus==2.5.16",
    "sentence-transformers>=5.1.1",
    "torch>=2.9.0",
]
